--- a/css/style.css
+++ b/css/style.css
@@ -83,49 +83,17 @@ section {
     text-align: center;
 }
 
-section .div1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+section .first {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: #31242c;
+    color: rgb(49, 36, 44);
+    height: 100%;
 }
 
-section .div1 .box1 {
-    width: 310px;
-    height: 220px;
-    border: 1px solid rgb(49, 36, 44);
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    z-index: -1;
-}
-
-section .div1 .box1 span {
-    padding-bottom: 10px;
-}
-
-section .div1 .box2 {
-    width: 500px;
-    height: 380px;
-    position: absolute;
-    top: -30%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-}
-
-section .div1 .box2 h1 {
-    font-size: 105px;
-    z-index: 3;
+section .first .box1 {
+    font-size: 35px;
 }
 
 section .last {
@@ -335,20 +303,8 @@ section .task-box span {
     section {
         height: calc(100vh - 130px);
     }
-    section .div1 .box1 {
-        width: 200px;
-        height: 100px;
-    }
-    section .div1 .box1 span{
-        font-size: 14px;
-    }
-    section .div1 .box2 {
-        width: 300px;
-        height: 240px;
-        top: -70%;
-    }
-    section .div1 .box2 h1 {
-        font-size: 62px;
+    section .first .box1 {
+        font-size: 22px;
     }
     section .form .add {
         padding: 15px 5px;
@@ -356,7 +312,6 @@ section .task-box span {
         border: 2px solid #f5f5dc;
         font-size: 12px;
     }
-    
     section .form .add:hover {
         box-shadow: 2px 2px 10px #f5f5dc;
     }
